fix: allow empty successful milky responses